# sa-hackathon-demo

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  example.env  pyproject.toml  redis-connection-test.py
src/services/: analyzer.py  db.py  fraudomatic.py  index.html  transaction_api.py  transactions.py  ui.py  ui_run.py  user_api.py
terraform/: example.tfvars  main.tf  outputs.tf  variables.tf
tests/: test_1.py  test_2.py  test_3.py  test_user_api.py
transaction-generation/: README.md  index.html  test_user_api.py  transaction_api.py  user_api.py
